# ParsePlaywrightOriginall

./: .dockerignore  .gitignore  Dockerfile  Readme.md  armtek_15163-25010.html  auth.py  bot.py  cache_manager.py  captcha_manager.py  config.py  debug_error_SPB094.html  debug_final.xlsx  docker-compose.yml  main.py  price_adjuster.py  pyproject.toml  requirements.txt  scheme.md  scraper_armtek.py  scraper_armtek_pure.py  scraper_avtoformula.py  scraper_avtoformula_pure.py  scraper_japarts.py  scraper_japarts_pure.py  scraper_stparts.py  scraper_stparts_pure.py  state_manager.py  telegram_sender.py  test_proxy.py  utils.py
back/: 2capcha.txt  anti-capcha.txt  bot.txt  main-parser.py  parse.py  work-good.txt
debug_armtek/: attempt1_16290-F3010_20260116_175232.html  attempt1_16291-0Y010_20260116_175240.html  attempt1_16291-F0010_20260116_175242.html  attempt1_16363-0T280_20260116_180837.html  attempt1_16363-0T310_20260116_180848.html  attempt1_16363-0T320_20260116_180856.html  attempt1_16363-0V390_20260116_180956.html  attempt1_16523-F0050_20260116_182516.html  attempt1_16533-0H030_20260116_182619.html  attempt1_16577-F0030_20260116_184132.html  attempt1_16577-F0070_20260116_184135.html  attempt1_16577-F2100_20260116_184224.html  attempt1_16594-F2130_20260116_185725.html  attempt1_16594-F2190_20260116_185741.html  attempt1_16695-F0180_20260116_191355.html  attempt1_16695-F0330_20260116_191407.html  attempt1_16695-F2010_20260116_191509.html  attempt1_17120-F2070_20260116_193001.html  attempt1_17141-F0060_20260116_193453.html  attempt1_17141-F2090_20260116_193616.html  (+1395 more)
(+3155 files in other folders)
