[project]
name = "price-parser"
version = "0.1.0"
description = "Автоматический парсер цен для автозапчастей"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.1.3",
    "openpyxl==3.1.2",
    "xlrd==2.0.1",
    "2captcha-python==1.2.1",
    "python-dotenv==1.0.0",
    "python-telegram-bot==21.0.1",
    "tqdm==4.66.1",
    "playwright==1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"